--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
             </div>
         </div>
     </nav>
+    <header class="header">
+        <div class="header-wrapper">
+            <div class="header-title">
+                <h1><strong>Hi, my name is <em>Leo</em></strong><br> a frontend developer</h1>
+            </div>
+            <div class="header-text">
+                <p>with passion for learning and creating.</p>
+            </div>
+            <a href="#!" class="btn">Download CV</a>
+        </div>
+    </header>
 </body>
 </html>
