--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </nav>
-    <header class="header">
+    <header class="header none">
         <div class="header-wrapper">
             <div class="header-title">
                 <h1><strong>Hi, my name is <em>Leo</em></strong><br> a frontend developer</h1>
@@ -35,7 +35,7 @@
             <a href="#!" class="btn">Download CV</a>
         </div>
     </header>
-    <main class="section">
+    <main class="section none">
         <div class="container">
             <h2 class="title-1">Projects</h2>
             <ul class="projects">
@@ -78,6 +78,22 @@
             </ul>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <ul class="social">
+                    <li class="social__item"><a href="#"><img src="/img/icons/vk.svg" alt=""></a></li>
+                    <li class="social__item"><a href="#"><img src="/img/icons/instagram.svg" alt=""></a></li>
+                    <li class="social__item"><a href="~#"><img src="/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item"><a href="#"><img src="/img/icons/gitHub.svg" alt=""></a></li>
+                    <li class="social__item"><a href="#"><img src="/img/icons/linkedIn.svg" alt=""></a></li>
+                </ul>
+                <div class="copyright">
+                    <p>© 2022 frontend-dev.com</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
