--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </nav>
-    <header class="header none">
+    <header class="header">
         <div class="header-wrapper">
             <div class="header-title">
                 <h1><strong>Hi, my name is <em>Leo</em></strong><br> a frontend developer</h1>
@@ -35,7 +35,7 @@
             <a href="#!" class="btn">Download CV</a>
         </div>
     </header>
-    <main class="section none">
+    <main class="section">
         <div class="container">
             <h2 class="title-1">Projects</h2>
             <ul class="projects">
