created skills block

--- a/skills.html
+++ b/skills.html
@@ -17,8 +17,8 @@
                 <a href="" class="logo"><strong>Freelancer</strong> portfolio</a>
                 <ul class="nav-list">
                     <li class="nav-list__item"><a href="/index.html"
-                            class="nav-list__link nav-list__link--active">Projects</a></li>
-                    <li class="nav-list__item"><a href="" class="nav-list__link">Skills</a></li>
+                            class="nav-list__link">Projects</a></li>
+                    <li class="nav-list__item"><a href="" class="nav-list__link nav-list__link--active">Skills</a></li>
                     <li class="nav-list__item"><a href="" class="nav-list__link">Contacts</a></li>
                 </ul>
             </div>
@@ -26,19 +26,17 @@
     </nav>
     <main class="section">
         <div class="container">
-            <div class="project-details">
-                <h1 class="title-1">Video service</h1>
-                <div class="project-details__cover">
-                    <img src="/img/projects/02-big.jpg" alt="">
-                </div>
-                <div class="project-details__description">
-                    <p>Skills: React, Node.js, MongoDB</p>
-                </div>
-                <a href="#!" class="btn-outline">
-                    <img src="/img/icons/gitHub-black.svg" alt="">
-                    GitHub repo
-                </a>
-            </div>
+            <h1 class="title-1">Skills</h1>
+            <ul class="content-list">
+                <li class="content-list__item">
+                    <h2 class="title-2">Frontend</h2>
+                    <p>JavaScript, HTML, CSS</p>
+                </li>
+                <li class="content-list__item">
+                    <h2 class="title-2">Backend</h2>
+                    <p>xxx</p>
+                </li>
+            </ul>
         </div>
     </main>
     <footer class="footer">
