--- a/contacts.html
+++ b/contacts.html
@@ -18,23 +18,27 @@
                 <ul class="nav-list">
                     <li class="nav-list__item"><a href="/index.html"
                             class="nav-list__link">Projects</a></li>
-                    <li class="nav-list__item"><a href="/skills.html" class="nav-list__link nav-list__link--active">Skills</a></li>
-                    <li class="nav-list__item"><a href="/contacts.html" class="nav-list__link">Contacts</a></li>
+                    <li class="nav-list__item"><a href="/skills.html" class="nav-list__link">Skills</a></li>
+                    <li class="nav-list__item"><a href="/contacts.html" class="nav-list__link nav-list__link--active">Contacts</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="section">
         <div class="container">
-            <h1 class="title-1">Skills</h1>
+            <h1 class="title-1">Contacts</h1>
             <ul class="content-list">
                 <li class="content-list__item">
-                    <h2 class="title-2">Frontend</h2>
-                    <p>JavaScript, HTML, CSS</p>
+                    <h2 class="title-2">Location</h2>
+                    <p>Moscow, Russia</p>
                 </li>
                 <li class="content-list__item">
-                    <h2 class="title-2">Backend</h2>
-                    <p>xxx</p>
+                    <h2 class="title-2">Telegram / WhatsApp</h2>
+                    <p><a href="tel:+79064750914">+7 (906) 475-09-14</a></p>
+                </li>
+                <li class="content-list__item">
+                    <h2 class="title-2">Email</h2>
+                    <p><a href="emailto:workspace2707@yandex.ru">workspace2707@yandex.ru</a></p>
                 </li>
             </ul>
         </div>
@@ -45,7 +49,7 @@
                 <ul class="social">
                     <li class="social__item"><a href="#"><img src="/img/icons/vk.svg" alt=""></a></li>
                     <li class="social__item"><a href="#"><img src="/img/icons/instagram.svg" alt=""></a></li>
-                    <li class="social__item"><a href="~#"><img src="/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item"><a href="#"><img src="/img/icons/twitter.svg" alt=""></a></li>
                     <li class="social__item"><a href="#"><img src="/img/icons/gitHub.svg" alt=""></a></li>
                     <li class="social__item"><a href="#"><img src="/img/icons/linkedIn.svg" alt=""></a></li>
                 </ul>
