--- a/contacts.html
+++ b/contacts.html
@@ -15,6 +15,12 @@
         <div class="container">
             <div class="var-row">
                 <a href="" class="logo"><strong>Freelancer</strong> portfolio</a>
+
+                <button class="dark-mode-btn">
+                    <img src="/img/icons/sun.svg" alt="light mode" class="dark-mode-btn__icon">
+                    <img src="/img/icons/moon.svg" alt="dark mode" class="dark-mode-btn__icon">
+                </button>
+
                 <ul class="nav-list">
                     <li class="nav-list__item"><a href="/index.html"
                             class="nav-list__link">Projects</a></li>
@@ -59,6 +65,7 @@
             </div>
         </div>
     </footer>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
