--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="var-row">
                 <a href="" class="logo"><strong>Freelancer</strong> portfolio</a>
 
-                <button class="dark-mode-btn dark-mode-btn--active">
+                <button class="dark-mode-btn">
                     <img src="/img/icons/sun.svg" alt="light mode" class="dark-mode-btn__icon">
                     <img src="/img/icons/moon.svg" alt="dark mode" class="dark-mode-btn__icon">
                 </button>
